--- a/index.html
+++ b/index.html
@@ -29,8 +29,43 @@
     <img class="logo" src="tile-wide.png" alt="logo">
     <h1>Herramienta Seguimiento Universitario</h1>
   </header>
-  <main class="container">
-      <p>Hello World!</p>
+  <main class="container primaria px-3 py-5">
+      <div class="herramientas row">
+
+        <div class="col-4 px-5">
+          <div class="herramienta card">
+            <img src="tile.png" class="card-img-top" alt="herramienta">
+            <div class="card-body">
+              <h2 class="card-title">Card title</h2>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-4 px-5">
+          <div class="herramienta card">
+            <img src="tile.png" class="card-img-top" alt="herramienta">
+            <div class="card-body">
+              <h2 class="card-title">Card title</h2>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-4 px-5">
+          <div class="herramienta card">
+            <img src="tile.png" class="card-img-top" alt="herramienta">
+            <div class="card-body">
+              <h2 class="card-title">Card title</h2>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
   </main>
   <footer class="container-fluid text-center">
       <span>Copyright © <date>2019</date> All rights reserved.</span>
