--- a/index.html
+++ b/index.html
@@ -29,43 +29,51 @@
     <img class="logo" src="tile-wide.png" alt="logo">
     <h1>Herramienta Seguimiento Universitario</h1>
   </header>
+  <div class="container-fluid">
+    <nav class="container navbar navbar-expand-lg navbar-light">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="#">Tablas</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Perfiles</a></li>
+      </ul>
+    </nav>
+  </div>
   <main class="container primaria px-3 py-5">
-      <div class="herramientas row">
+    <div class="herramientas row">
 
-        <div class="col-4 px-5">
-          <div class="herramienta card">
-            <img src="tile.png" class="card-img-top" alt="herramienta">
-            <div class="card-body">
-              <h2 class="card-title">Card title</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
+      <div class="col-4 px-5">
+        <div class="herramienta card">
+          <img src="tile.png" class="card-img-top" alt="herramienta">
+          <div class="card-body">
+            <h2 class="card-title">Card title</h2>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
-
-        <div class="col-4 px-5">
-          <div class="herramienta card">
-            <img src="tile.png" class="card-img-top" alt="herramienta">
-            <div class="card-body">
-              <h2 class="card-title">Card title</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-4 px-5">
-          <div class="herramienta card">
-            <img src="tile.png" class="card-img-top" alt="herramienta">
-            <div class="card-body">
-              <h2 class="card-title">Card title</h2>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
-            </div>
-          </div>
-        </div>
-
       </div>
+
+      <div class="col-4 px-5">
+        <div class="herramienta card">
+          <img src="tile.png" class="card-img-top" alt="herramienta">
+          <div class="card-body">
+            <h2 class="card-title">Card title</h2>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-4 px-5">
+        <div class="herramienta card">
+          <img src="tile.png" class="card-img-top" alt="herramienta">
+          <div class="card-body">
+            <h2 class="card-title">Card title</h2>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </main>
   <footer class="container-fluid text-center">
       <span>Copyright © <date>2019</date> All rights reserved.</span>
