--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <!-- Add your site or application content here -->
 
-  <header class="container-fluid d-flex align-items-center">
+  <header class="resaltado container-fluid d-flex align-items-center">
     <img class="logo" src="tile-wide.png" alt="logo">
     <h1>Herramienta Seguimiento Universitario</h1>
   </header>
@@ -75,7 +75,7 @@
 
     </div>
   </main>
-  <footer class="container-fluid text-center">
+  <footer class="resaltado container-fluid text-center">
       <span>Copyright © <date>2019</date> All rights reserved.</span>
   </footer>
 
