--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       </ul>
     </nav>
   </div>
-  <main class="container primaria px-3 py-5">
+  <main class="container primaria px-3 py-4">
     <div class="herramientas row">
 
-      <div class="col-4 px-5">
+      <div class="col-md-4 col-12 px-4 py-2 py-md-0">
         <div class="herramienta card">
           <img src="tile.png" class="card-img-top" alt="herramienta">
           <div class="card-body">
@@ -51,7 +51,7 @@
         </div>
       </div>
 
-      <div class="col-4 px-5">
+      <div class="col-md-4 col-12 px-4 py-2 py-md-0">
         <div class="herramienta card">
           <img src="tile.png" class="card-img-top" alt="herramienta">
           <div class="card-body">
@@ -62,7 +62,7 @@
         </div>
       </div>
 
-      <div class="col-4 px-5">
+      <div class="col-md-4 col-12 px-4 py-2 py-md-0">
         <div class="herramienta card">
           <img src="tile.png" class="card-img-top" alt="herramienta">
           <div class="card-body">
