--- a/index.html
+++ b/index.html
@@ -37,39 +37,33 @@
       </ul>
     </nav>
   </div>
-  <main class="container primaria px-3 py-4">
-    <div class="herramientas row">
+  <main class="container primaria p-3">
+    <div class="herramientas d-flex d-flex justify-content-around flex-column flex-lg-row">
 
-      <div class="col-md-4 col-12 px-4 py-2 py-md-0">
-        <div class="herramienta card">
-          <img src="tile.png" class="card-img-top" alt="herramienta">
-          <div class="card-body">
-            <h2 class="card-title">Card title</h2>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <div class="herramienta card">
+        <img src="tile.png" class="card-img-top" alt="herramienta">
+        <div class="card-body">
+          <h2 class="card-title">Card title</h2>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 
-      <div class="col-md-4 col-12 px-4 py-2 py-md-0">
-        <div class="herramienta card">
-          <img src="tile.png" class="card-img-top" alt="herramienta">
-          <div class="card-body">
-            <h2 class="card-title">Card title</h2>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <div class="herramienta card">
+        <img src="tile.png" class="card-img-top" alt="herramienta">
+        <div class="card-body">
+          <h2 class="card-title">Card title</h2>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 
-      <div class="col-md-4 col-12 px-4 py-2 py-md-0">
-        <div class="herramienta card">
-          <img src="tile.png" class="card-img-top" alt="herramienta">
-          <div class="card-body">
-            <h2 class="card-title">Card title</h2>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-          </div>
+      <div class="herramienta card">
+        <img src="tile.png" class="card-img-top" alt="herramienta">
+        <div class="card-body">
+          <h2 class="card-title">Card title</h2>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
 
