--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <img class="logo" src="tile-wide.png" alt="logo">
     <h1>Herramienta Seguimiento Universitario</h1>
   </header>
-  <div class="container-fluid">
-    <nav class="container navbar navbar-expand-lg navbar-light">
+  <div class="container-fluid secundaria">
+    <nav class="container navbar navbar-expand-lg navbar-dark py-0">
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link" href="#">Tablas</a></li>
         <li class="nav-item"><a class="nav-link" href="#">Perfiles</a></li>
