--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Herramienta Seguimiento Universitario</title>
+  <title>HSU</title>
   <meta name="description" content="A site about things">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,7 +27,7 @@
 
   <header class="resaltado container-fluid d-flex align-items-center">
     <img class="logo" src="tile-wide.png" alt="logo">
-    <h1>Herramienta Seguimiento Universitario</h1>
+    <h1>HSU</h1>
   </header>
   <div class="container-fluid secundaria">
     <nav class="container navbar navbar-expand-lg navbar-dark py-0">
