--- a/index.html
+++ b/index.html
@@ -32,8 +32,25 @@
   <div class="container-fluid secundaria">
     <nav class="container navbar navbar-expand-lg navbar-dark py-0">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#">Tablas</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Perfiles</a></li>
+        <li class="nav-item dropdow">
+          <a class="nav-link dropdown-toggle" href="#" id="tablasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tablas</a>
+          <div class="dropdown-menu" aria-labelledby="tablasDropdown">
+            <a class="dropdown-item" href="#">General</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Por materia</a>
+            <a class="dropdown-item" href="#">Por carrera</a>
+            <a class="dropdown-item" href="#">Por tutor</a>
+          </div>
+        </li>
+        <li class="nav-item dropdow">
+          <a class="nav-link dropdown-toggle" href="#" id="perfilesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Perfiles</a>
+          <div class="dropdown-menu" aria-labelledby="tablasDropdown">
+            <a class="dropdown-item" href="#">Alumnos</a>
+            <a class="dropdown-item" href="#">Tutores</a>
+            <a class="dropdown-item" href="#">Materias</a>
+            <a class="dropdown-item" href="#">Carreras</a>
+          </div>
+        </li>
       </ul>
     </nav>
   </div>
