--- a/index.html
+++ b/index.html
@@ -29,29 +29,35 @@
     <img class="logo" src="tile-wide.png" alt="logo">
     <h1>HSU</h1>
   </header>
-  <div class="container-fluid secundaria">
-    <nav class="container navbar navbar-expand-lg navbar-dark py-0">
-      <ul class="navbar-nav">
-        <li class="nav-item dropdow">
-          <a class="nav-link dropdown-toggle" href="#" id="tablasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tablas</a>
-          <div class="dropdown-menu" aria-labelledby="tablasDropdown">
-            <a class="dropdown-item" href="#">General</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Por materia</a>
-            <a class="dropdown-item" href="#">Por carrera</a>
-            <a class="dropdown-item" href="#">Por tutor</a>
-          </div>
-        </li>
-        <li class="nav-item dropdow">
-          <a class="nav-link dropdown-toggle" href="#" id="perfilesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Perfiles</a>
-          <div class="dropdown-menu" aria-labelledby="tablasDropdown">
-            <a class="dropdown-item" href="#">Alumnos</a>
-            <a class="dropdown-item" href="#">Tutores</a>
-            <a class="dropdown-item" href="#">Materias</a>
-            <a class="dropdown-item" href="#">Carreras</a>
-          </div>
-        </li>
-      </ul>
+  <div class="secundaria container-fluid p-0">
+    <nav class="barra-navegacion navbar navbar-expand-lg navbar-dark py-2 px-0">
+      <button class="navbar-toggler mx-3" type="button" data-toggle="collapse" data-target="#mainNavToggler" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="mainNavToggler">
+        <ul class="list-unstyled navbar-nav py-2 px-4">
+          <li>
+            <a class="text-reset" href="#" id="tablasDropdown" role="button" aria-haspopup="true">Tablas</a>
+            <!-- <div class="sub-menu-barra menu-transparente" aria-labelledby="tablasDropdown">
+              <a class="" href="#">General</a>
+              <hr>
+              <a class="" href="#">Por materia</a>
+              <a class="" href="#">Por carrera</a>
+              <a class="" href="#">Por tutor</a>
+            </div> -->
+          </li>
+          <li>
+            <a class="text-reset" href="#" id="perfilesDropdown" role="button" aria-haspopup="true">Perfiles</a>
+            <!-- <div class="sub-menu-barra menu-transparente" aria-labelledby="perfilesDropdown">
+              <a class="" href="#">Alumnos</a>
+              <a class="" href="#">Tutores</a>
+              <a class="" href="#">Materias</a>
+              <a class="" href="#">Carreras</a>
+            </div> -->
+          </li>
+        </ul>
+      </div>
     </nav>
   </div>
   <main class="container primaria p-3">
