More changes toward Custom+Bootstrap Nav,

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
     <img class="logo" src="tile-wide.png" alt="logo">
     <h1>HSU</h1>
   </header>
-  <div class="secundaria container-fluid p-0">
-    <nav class="barra-navegacion navbar navbar-expand-lg navbar-dark py-2 px-0">
-      <button class="navbar-toggler mx-3" type="button" data-toggle="collapse" data-target="#mainNavToggler" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="secundaria container-fluid">
+    <nav class="barra-navegacion navbar navbar-expand-lg navbar-dark py-2">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavToggler" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
       <div class="collapse navbar-collapse" id="mainNavToggler">
-        <ul class="list-unstyled navbar-nav py-2 px-4">
-          <li>
-            <a class="text-reset" href="#" id="tablasDropdown" role="button" aria-haspopup="true">Tablas</a>
+        <ul class="list-unstyled navbar-nav px-2">
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="tablasDropdown" role="button" aria-haspopup="true">Tablas</a>
             <!-- <div class="sub-menu-barra menu-transparente" aria-labelledby="tablasDropdown">
               <a class="" href="#">General</a>
               <hr>
@@ -47,8 +47,8 @@
               <a class="" href="#">Por tutor</a>
             </div> -->
           </li>
-          <li>
-            <a class="text-reset" href="#" id="perfilesDropdown" role="button" aria-haspopup="true">Perfiles</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="perfilesDropdown" role="button" aria-haspopup="true">Perfiles</a>
             <!-- <div class="sub-menu-barra menu-transparente" aria-labelledby="perfilesDropdown">
               <a class="" href="#">Alumnos</a>
               <a class="" href="#">Tutores</a>
