Boton inicio y color

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
       <div class="collapse navbar-collapse" id="mainNavToggler">
         <ul class="list-unstyled navbar-nav px-2">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Inicio</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="#" id="tablasDropdown" role="button" aria-haspopup="true">Tablas</a>
             <!-- <div class="sub-menu-barra menu-transparente" aria-labelledby="tablasDropdown">
