--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
   <!-- Add your site or application content here -->
 
-  <header class="resaltado container-fluid d-flex align-items-center">
-    <img class="logo" src="tile-wide.png" alt="logo">
-    <h1>HSU</h1>
-  </header>
-  <div class="secundaria container-fluid">
-    <nav class="barra-navegacion navbar navbar-expand-lg navbar-dark py-2">
+  <header class="resaltado container-fluid d-flex">
+    <nav class="barra-navegacion navbar navbar-expand-lg navbar-dark py-0">
+      <div class="navbar-brand d-flex align-items-center">
+        <img class="logo" src="tile-wide.png" alt="logo">
+        <h1>HSU</h1>
+      </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavToggler" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -62,7 +62,7 @@
         </ul>
       </div>
     </nav>
-  </div>
+  </header>
   <main class="container primaria p-3">
     <div class="herramientas d-flex d-flex justify-content-around flex-column flex-lg-row">
 
