--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- Add your site or application content here -->
 
   <header class="resaltado container-fluid d-flex">
-    <nav class="barra-navegacion navbar navbar-expand-lg navbar-dark py-0">
+    <nav id="barra-principal" class="navbar navbar-expand-lg navbar-dark py-0">
       <div class="navbar-brand d-flex align-items-center">
         <img class="logo" src="tile-wide.png" alt="logo">
         <h1>HSU</h1>
@@ -36,28 +36,32 @@
       </button>
 
       <div class="collapse navbar-collapse" id="mainNavToggler">
-        <ul class="list-unstyled navbar-nav px-2">
+        <ul class="navbar-nav px-2">
           <li class="nav-item active">
             <a class="nav-link" href="#">Inicio</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="tablasDropdown" role="button" aria-haspopup="true">Tablas</a>
-            <!-- <div class="sub-menu-barra menu-transparente" aria-labelledby="tablasDropdown">
-              <a class="" href="#">General</a>
-              <hr>
-              <a class="" href="#">Por materia</a>
-              <a class="" href="#">Por carrera</a>
-              <a class="" href="#">Por tutor</a>
-            </div> -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="tablasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Tablas
+            </a>
+            <div class="dropdown-menu menu-transparente" aria-labelledby="tablasDropdown">
+              <a class="dropdown-item" href="#">General</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Por materia</a>
+              <a class="dropdown-item" href="#">Por carrera</a>
+              <a class="dropdown-item" href="#">Por tutor</a>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" id="perfilesDropdown" role="button" aria-haspopup="true">Perfiles</a>
-            <!-- <div class="sub-menu-barra menu-transparente" aria-labelledby="perfilesDropdown">
-              <a class="" href="#">Alumnos</a>
-              <a class="" href="#">Tutores</a>
-              <a class="" href="#">Materias</a>
-              <a class="" href="#">Carreras</a>
-            </div> -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="perfilesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Perfiles
+            </a>
+            <div class="dropdown-menu menu-transparente" aria-labelledby="perfilesDropdown">
+              <a class="dropdown-item" href="#">Alumnos</a>
+              <a class="dropdown-item" href="#">Tutores</a>
+              <a class="dropdown-item" href="#">Materias</a>
+              <a class="dropdown-item" href="#">Carreras</a>
+            </div>
           </li>
         </ul>
       </div>
