--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <a class="nav-link" href="#">Inicio</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="tablasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle-custom" href="#" id="tablasDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Tablas
             </a>
-            <div class="dropdown-menu menu-transparente" aria-labelledby="tablasDropdown">
+            <div class="menu-transparente dropdown-menu" aria-labelledby="tablasDropdown">
               <a class="dropdown-item" href="#">General</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Por materia</a>
@@ -53,10 +53,10 @@
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="perfilesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="nav-link dropdown-toggle-custom" href="#" id="perfilesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Perfiles
             </a>
-            <div class="dropdown-menu menu-transparente" aria-labelledby="perfilesDropdown">
+            <div class="menu-transparente dropdown-menu" aria-labelledby="perfilesDropdown">
               <a class="dropdown-item" href="#">Alumnos</a>
               <a class="dropdown-item" href="#">Tutores</a>
               <a class="dropdown-item" href="#">Materias</a>
