prepare to hover navbar item animation

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
   <header class="resaltado container-fluid d-flex">
     <nav id="barra-principal" class="navbar navbar-expand-lg navbar-dark py-0">
-      <div class="navbar-brand d-flex align-items-center">
+      <div class="navbar-brand d-flex align-items-center p-0">
         <img class="logo" src="tile-wide.png" alt="logo">
-        <h1>HSU</h1>
+        <h1 class="m-0">HSU</h1>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainNavToggler" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
