another minnor fix

--- a/template.html
+++ b/template.html
@@ -38,7 +38,7 @@
 
       <div class="collapse navbar-collapse" id="mainNavToggler">
         <ul class="navbar-nav px-2">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="./index.html">Inicio</a>
           </li>
           <li class="nav-item dropdown">
@@ -69,7 +69,7 @@
     </nav>
   </header>
   <main class="container primaria p-3">
-    
+
   </main>
   <footer class="resaltado container-fluid text-center">
       <span>Copyright © <date>2019</date> All rights reserved.</span>
