--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </nav>
   </header>
   <main class="container primaria p-3">
-    <div class="herramientas d-flex d-flex justify-content-around flex-column flex-lg-row">
+    <section id="herramientas" class="d-flex d-flex justify-content-around flex-column flex-lg-row">
 
       <div class="herramienta card">
         <img src="tile.png" class="card-img-top" alt="herramienta">
@@ -97,8 +97,7 @@
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
-
-    </div>
+    </section>
   </main>
   <footer class="resaltado container-fluid text-center">
       <span>Copyright © <date>2019</date> All rights reserved.</span>
