--- a/index.html
+++ b/index.html
@@ -87,22 +87,33 @@
           <article class="carousel-item">
             <p>Foo Bar Foo Foo</p>
           </article>
-        </div>
-        <a class="carousel-control-prev" href="#carouselInfo" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselInfo" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
 
-        <ol class="">
-          <li data-target="#carouselInfo" data-slide-to="0" class="active">HSU</li>
-          <li data-target="#carouselInfo" data-slide-to="1">Tablas de Datos</li>
-          <li data-target="#carouselInfo" data-slide-to="2">Perfiles</li>
-          <li data-target="#carouselInfo" data-slide-to="3">Etc 1</li>
-          <li data-target="#carouselInfo" data-slide-to="4">Etc 2</li>
+          <a class="carousel-control-prev" href="#carouselInfo" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselInfo" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+        <ol class="nav nav-pills nav-fill">
+          <li class="nav-item">
+            <a class="nav-link active"  data-target="#carouselInfo" data-slide-to="0" href="#">HSU</a>
+          </li>
+          <li class="nav-item">
+            <a data-target="#carouselInfo" data-slide-to="1" class="nav-link" href="#">Tablas de Datos</a>
+          </li>
+          <li class="nav-item">
+            <a data-target="#carouselInfo" data-slide-to="2" class="nav-link" href="#">Perfiles</a>
+          </li>
+          <li class="nav-item">
+            <a data-target="#carouselInfo" data-slide-to="3" class="nav-link" href="#">Etc 1</a>
+          </a>
+          <li class="nav-item">
+            <a data-target="#carouselInfo" data-slide-to="4" class="nav-link" href="#">Etc 2</a>
+          </li>
         </ol>
       </div>
     </section>
