--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div id="carouselInfo" class="carousel slide carousel-fade rounded" data-ride="carousel" data-interval="false">
         <div class="carousel-inner">
           <article class="carousel-item active">
-            <div class="carousel-caption">
+            <div class="article-content">
               <h2>Herramienta Seguimiento Universitario</h2>
               <div class="cuerpo">
                 <p>La <strong>Herramienta de Seguimiento Universitario&trade;</strong> es un desarrollo hecho a medida que utiliza tecnologías web para facilitar a docentes y tutores el seguimiento del progreso y la actividad de sus estudiantes.</p>
@@ -81,7 +81,7 @@
             </div>
           </article>
           <article class="carousel-item">
-            <div class="carousel-caption">
+            <div class="article-content">
               <h2>Tablas de Datos</h2>
               <div class="cuerpo">
                 <p>Desde el menu superior puede accederse a diversas tablas de datos, que pueden ordenarse de diversos modos y en las cuales pueden añadirse anotaciones.</p>
@@ -89,7 +89,7 @@
             </div>
           </article>
           <article class="carousel-item">
-            <div class="carousel-caption">
+            <div class="article-content">
               <h2>Perfiles</h2>
               <div class="cuerpo">
                 <p>Los perfiles individuales de cada estudiante, materia, carrera o tutor permiten enlazar de forma rápida y dinámica todos los datos relacionados, y a su vez permite la creacion de anotaciones.</p>
@@ -97,7 +97,7 @@
             </div>
           </article>
           <article class="carousel-item">
-            <div class="carousel-caption">
+            <div class="article-content">
               <h2>Etc 1</h2>
               <div class="cuerpo">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse urna quam, faucibus maximus felis eu, aliquet suscipit turpis. Sed a finibus mi. Proin rutrum consectetur consectetur. Nam posuere dolor tincidunt, luctus ipsum id, lobortis elit. Sed nec suscipit tellus, sit amet sollicitudin neque.</p>
@@ -105,7 +105,7 @@
             </div>
           </article>
           <article class="carousel-item">
-            <div class="carousel-caption">
+            <div class="article-content">
               <h2>Etc 2</h2>
               <div class="cuerpo">
                 <p>Aliquam ac quam viverra, vehicula massa eu, commodo leo. Proin in scelerisque mi, quis pulvinar metus. Cras lacinia dignissim nunc, in viverra lorem consectetur nec. Maecenas efficitur eros et velit vehicula, rutrum vehicula diam volutpat. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum volutpat lobortis nisi sed aliquam.</p>
