--- a/alumnos.html
+++ b/alumnos.html
@@ -69,6 +69,38 @@
     </nav>
   </header>
   <main class="container primaria p-3">
+    <h2>Perfil Usuario</h2>
+    <article class="card text-center resaltado-borde">
+      <header class="card-header rounded-0 resaltado">
+        <h3>Cosme Fulanito</h3>
+      </header>
+      <div class="d-lg-flex">
+        <div class="profilepic-wrapper w-50 my-3 mx-auto d-flex flex-column">
+          <img src="./img/user.png" class="img-fluid rounded-circle" alt="foro de usuario">
+          <span class="resaltado rounded-pill">Link Perfil Moodle</span>
+          <span>Ultima Conexión - <time>25/05/1810</time> </span>
+        </div>
+
+        <ul class="info-basica list-group list-group-flush text-left">
+          <li class="list-group-item"><h3>Email</h3> cosmefulanito@noreply.com</li>
+          <li class="list-group-item"><h3>DNI</h3> 42.000.000</li>
+          <li class="list-group-item"><h3>Carreras</h3> Tecnicatura en análisis de mostachos</li>
+        </ul>
+      </div>
+      <div class="materias list-group-item border-right-0 border-left-0 text-left"><h3>Materias</h3>
+        <ul class="list-unstyled d-lg-flex justify-content-around">
+          <li class="resaltado rounded"><span>Peinado de Mostachos</span></li>
+          <li class="resaltado rounded"><span>Afeitado riesgoso IV</span></li>
+          <li class="resaltado rounded"><span>Seguridad e Higiene</span></li>
+        </ul>
+      </div>
+      <div class="card-body">
+        <h3>Anotaciones</h3>
+        <div class="primaria rounded p-3">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquet diam at malesuada suscipit. Nam porta turpis placerat arcu sagittis, et cursus elit faucibus. Cras faucibus elit id neque tincidunt pharetra. Sed congue, diam at vulputate ultrices, lorem libero accumsan eros, sed placerat ligula diam nec lectus. Ut quis libero urna. Praesent vitae iaculis diam, vitae scelerisque lectus. Nullam porttitor lorem vitae justo fringilla tristique. Aenean eu massa mauris</p>
+        </div>
+      </div>
+    </article>
 
   </main>
   <footer class="resaltado container-fluid text-center">
