--- a/alumnos.html
+++ b/alumnos.html
@@ -77,8 +77,8 @@
       <div class="d-lg-flex">
         <div class="profilepic-wrapper w-50 my-3 mx-auto d-flex flex-column">
           <img src="./img/user.png" class="img-fluid rounded-circle" alt="foro de usuario">
-          <span class="resaltado rounded-pill">Link Perfil Moodle</span>
-          <span>Ultima Conexión - <time>25/05/1810</time> </span>
+          <a href="#" class="resaltado text-decoration-none rounded-pill">Link Perfil Campus</a>
+          <span>Ultima Conexión Registrada - <time>25/05/1810</time> </span>
         </div>
 
         <ul class="info-basica list-group list-group-flush text-left">
