--- a/index.html
+++ b/index.html
@@ -69,10 +69,54 @@
     </nav>
 
     <div class="">
-      <span>Conectarse</span>
+      <button type="button" class="btn btn-outline-resaltado" data-toggle="modal" data-target="#login-modal">
+  Conectarse
+</button>
     </div>
   </header>
   <!-- Login Modal Space -->
+  <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-modal" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content borde-resaltado">
+        <div class="modal-header rounded-0 resaltado d-flex flex-column align-items-center">
+          <div class="d-flex w-100 align-items-start justify-content-between">
+            <h3 class="modal-title">HSU</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+          </div>
+          <p class="d-none d-md-inline text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tristique quis sapien convallis finibus. Donec vel augue vitae sem convallis tincidunt sit amet ac diam. Nam sit amet nisi in est facilisis commodo nec non eros.</p>
+
+        </div>
+        <div class="modal-body">
+          <form>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">@</div>
+                </div>
+                <input type="text" class="form-control" placeholder="Usuario">
+              </div>
+            </div>
+
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <div class="input-group-text">@</div>
+                </div>
+                <input type="password" class="form-control" placeholder="Contraseña">
+              </div>
+            </div>
+            <div class="form-group form-check">
+              <input type="checkbox" class="form-check-input" id="recuerdame">
+              <label class="form-check-label" for="recuerdame">Recuérdame</label>
+            </div>
+            <button type="submit" class="btn btn-block btn-primary">Acceder</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <main class="container primaria p-3">
     <section class="py-2">
