--- a/perfil-ejemplo.html
+++ b/perfil-ejemplo.html
@@ -70,7 +70,7 @@
   </header>
   <main class="container primaria p-3">
     <h2>Perfil Usuario</h2>
-    <article class="card text-center resaltado-borde">
+    <article class="card text-center borde-resaltado">
       <header class="card-header rounded-0 resaltado">
         <h3>Cosme Fulanito</h3>
       </header>
