--- a/index.html
+++ b/index.html
@@ -76,43 +76,45 @@
   </header>
   <!-- Login Modal Space -->
   <div class="modal fade" id="login-modal" tabindex="-1" role="dialog" aria-labelledby="login-modal" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content borde-resaltado">
-        <div class="modal-header rounded-0 resaltado d-flex flex-column align-items-center">
-          <div class="d-flex w-100 align-items-start justify-content-between">
-            <h3 class="modal-title">HSU</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
+    <div class="modal-dialog modal-lg" role="document">
+      <div class="m-auto modal-content borde-resaltado row flex-md-row">
+
+        <div class="col-lg-4 p-0">
+          <div class="modal-header rounded-0 border-0 resaltado d-flex flex-column align-items-center">
+            <div class="d-flex w-100 align-items-start justify-content-between">
+              <h3 class="modal-title">HSU</h5>
+            </div>
+            <p class="d-none d-md-inline text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tristique quis sapien convallis finibus. Donec vel augue vitae sem convallis tincidunt sit amet ac diam. Nam sit amet nisi in est facilisis commodo nec non eros.</p>
           </div>
-          <p class="d-none d-md-inline text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tristique quis sapien convallis finibus. Donec vel augue vitae sem convallis tincidunt sit amet ac diam. Nam sit amet nisi in est facilisis commodo nec non eros.</p>
-
         </div>
-        <div class="modal-body">
-          <form>
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">@</div>
-                </div>
-                <input type="text" class="form-control" placeholder="Usuario">
-              </div>
-            </div>
 
-            <div class="form-group">
-              <div class="input-group">
-                <div class="input-group-prepend">
-                  <div class="input-group-text">@</div>
+        <div class="col-lg-8 p-0">
+          <div class="modal-body">
+            <form>
+              <div class="form-group">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">@</div>
+                  </div>
+                  <input type="text" class="form-control" placeholder="Usuario">
                 </div>
-                <input type="password" class="form-control" placeholder="Contraseña">
               </div>
-            </div>
-            <div class="form-group form-check">
-              <input type="checkbox" class="form-check-input" id="recuerdame">
-              <label class="form-check-label" for="recuerdame">Recuérdame</label>
-            </div>
-            <button type="submit" class="btn btn-block btn-primary">Acceder</button>
-          </form>
+
+              <div class="form-group">
+                <div class="input-group">
+                  <div class="input-group-prepend">
+                    <div class="input-group-text">@</div>
+                  </div>
+                  <input type="password" class="form-control" placeholder="Contraseña">
+                </div>
+              </div>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="recuerdame">
+                <label class="form-check-label" for="recuerdame">Recuérdame</label>
+              </div>
+              <button type="submit" class="btn btn-block btn-primary">Acceder</button>
+            </form>
+          </div>
         </div>
       </div>
     </div>
