Implemented FA and other small things.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <div class="form-group">
                 <div class="input-group">
                   <div class="input-group-prepend">
-                    <div class="input-group-text">@</div>
+                    <div class="input-group-text"><i class="fas fa-user"></i></div>
                   </div>
                   <input type="text" class="form-control" placeholder="Usuario">
                 </div>
@@ -104,10 +104,11 @@
               <div class="form-group">
                 <div class="input-group">
                   <div class="input-group-prepend">
-                    <div class="input-group-text">@</div>
+                    <div class="input-group-text"><i class="fas fa-lock"></i></div>
                   </div>
                   <input type="password" class="form-control" placeholder="Contraseña">
                 </div>
+                <small id="emailHelp" class="form-text"><a href="#">¿Olvidó su contraseña?</a></small>
               </div>
               <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="recuerdame">
