Cambio en la tabla para incluir link.

--- a/tabla-general.html
+++ b/tabla-general.html
@@ -137,7 +137,7 @@
     <table class="table">
       <thead class="resaltado">
         <tr>
-          <th scope="col">Usuario</th>
+          <th scope="col">Perfil</th>
           <th scope="col">Nombre</th>
           <th scope="col">Apellido</th>
           <th scope="col">Email</th>
@@ -151,7 +151,7 @@
       </thead>
       <tbody>
         <tr>
-          <td>NotMrBurns</td>
+          <td><a class="btn btn-resaltado rounded-circle" href="./alumnos.html" target="_blank"><i class="fas fa-user-circle"></i></a></td>
           <td>Cosme</td>
           <td>Fulanito</td>
           <td>cosmefulanito@noreply.com</td>
@@ -164,7 +164,7 @@
         </tr>
 
         <tr>
-          <td>NotMrBurns</td>
+          <td><a class="btn btn-resaltado rounded-circle" href="./alumnos.html" target="_blank"><i class="fas fa-user-circle"></i></a></td>
           <td>Cosme</td>
           <td>Fulanito</td>
           <td>cosmefulanito@noreply.com</td>
@@ -177,7 +177,7 @@
         </tr>
 
         <tr>
-          <td>NotMrBurns</td>
+          <td><a class="btn btn-resaltado rounded-circle" href="./alumnos.html" target="_blank"><i class="fas fa-user-circle"></i></a></td>
           <td>Cosme</td>
           <td>Fulanito</td>
           <td>cosmefulanito@noreply.com</td>
