Cambiada etiqueta primaria a primario

--- a/alumnos.html
+++ b/alumnos.html
@@ -121,7 +121,7 @@
       </div>
     </div>
   </div>
-  <main class="container primaria p-3">
+  <main class="container primario p-3">
     <h2>Perfil Usuario</h2>
     <article class="card text-center borde-resaltado">
       <header class="card-header rounded-0 resaltado">
@@ -149,7 +149,7 @@
       </div>
       <div class="card-body">
         <h3>Anotaciones</h3>
-        <div class="primaria rounded p-3">
+        <div class="primario rounded p-3">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquet diam at malesuada suscipit. Nam porta turpis placerat arcu sagittis, et cursus elit faucibus. Cras faucibus elit id neque tincidunt pharetra. Sed congue, diam at vulputate ultrices, lorem libero accumsan eros, sed placerat ligula diam nec lectus. Ut quis libero urna. Praesent vitae iaculis diam, vitae scelerisque lectus. Nullam porttitor lorem vitae justo fringilla tristique. Aenean eu massa mauris</p>
         </div>
       </div>
