--- a/template.html
+++ b/template.html
@@ -122,7 +122,7 @@
     </div>
   </div>
 
-  <main class="container primaria p-3">
+  <main class="container primario p-3">
 
   </main>
   <footer class="resaltado container-fluid text-center">
