--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     </div>
   </div>
 
-  <main class="container primaria p-3">
+  <main class="container primario p-3">
     <section class="py-2">
       <div id="carouselInfo" class="carousel slide carousel-fade rounded" data-ride="carousel" data-interval="false">
         <div class="carousel-inner">
