otro primaria olvidado

--- a/tabla-general.html
+++ b/tabla-general.html
@@ -122,7 +122,7 @@
     </div>
   </div>
 
-  <main class="container primaria p-3">
+  <main class="container primario p-3">
 
     <h2>Tabla General</h2>
     <p>Descripción. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis fermentum, urna tincidunt congue tincidunt, tortor neque scelerisque enim, sed ornare magna ex ultrices mauris. Aenean dapibus semper tincidunt. Fusce sagittis neque ut odio iaculis, porttitor pharetra dolor vulputate. Maecenas efficitur id dui eget vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque augue leo, accumsan pellentesque laoreet quis, pharetra id purus. Cras iaculis aliquam ultricies. Suspendisse vehicula felis at consequat consectetur. Aliquam erat volutpat.</p>
