Creado btn-primario para reemplazar los primary de bootstrap

--- a/alumnos.html
+++ b/alumnos.html
@@ -114,7 +114,7 @@
                 <input type="checkbox" class="form-check-input" id="recuerdame">
                 <label class="form-check-label" for="recuerdame">Recuérdame</label>
               </div>
-              <button type="submit" class="btn btn-block btn-primary">Acceder</button>
+              <button type="submit" class="btn btn-block btn-primario">Acceder</button>
             </form>
           </div>
         </div>
@@ -130,7 +130,7 @@
       <div class="d-lg-flex">
         <div class="profilepic-wrapper w-50 my-3 mx-auto d-flex flex-column">
           <img src="./img/user.png" class="img-fluid rounded-circle" alt="foro de usuario">
-          <a href="#" class="resaltado text-decoration-none rounded-pill">Link Perfil Campus</a>
+          <a href="#" class="btn-primario text-decoration-none rounded-pill">Link Perfil Campus</a>
           <span>Ultima Conexión Registrada - <time>25/05/1810</time> </span>
         </div>
 
