--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <input type="checkbox" class="form-check-input" id="recuerdame">
                 <label class="form-check-label" for="recuerdame">Recuérdame</label>
               </div>
-              <button type="submit" class="btn btn-block btn-primary">Acceder</button>
+              <button type="submit" class="btn btn-block btn-primario">Acceder</button>
             </form>
           </div>
         </div>
@@ -192,7 +192,7 @@
         <div class="card-body">
           <h2 class="card-title">Card title</h2>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primario">Go somewhere</a>
         </div>
       </div>
 
@@ -201,7 +201,7 @@
         <div class="card-body">
           <h2 class="card-title">Card title</h2>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primario">Go somewhere</a>
         </div>
       </div>
 
@@ -210,7 +210,7 @@
         <div class="card-body">
           <h2 class="card-title">Card title</h2>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primario">Go somewhere</a>
         </div>
       </div>
     </section>
