--- a/tabla-general.html
+++ b/tabla-general.html
@@ -114,7 +114,7 @@
                 <input type="checkbox" class="form-check-input" id="recuerdame">
                 <label class="form-check-label" for="recuerdame">Recuérdame</label>
               </div>
-              <button type="submit" class="btn btn-block btn-primary">Acceder</button>
+              <button type="submit" class="btn btn-block btn-primario">Acceder</button>
             </form>
           </div>
         </div>
