--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               </div>
               <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="recuerdame">
-                <label class="form-check-label" for="recuerdame">Recuérdame</label>
+                <label class="form-check-label" for="recuerdame">Recordar usuario</label>
               </div>
               <button type="submit" class="btn btn-block btn-primario">Acceder</button>
             </form>
