Extender tabla de ejemplo

--- a/tabla-general.html
+++ b/tabla-general.html
@@ -188,6 +188,71 @@
           <td>Estudiante en Riesgo</td>
           <td><i class="fas fa-info-circle" data-toggle="tooltip" data-placement="top" title="Le da fiaca hacer los ejercicios."></i></td>
         </tr>
+
+        <tr>
+          <td><a class="btn btn-resaltado rounded-circle" href="./alumnos.html" target="_blank"><i class="fas fa-user-circle"></i></a></td>
+          <td>Foo</td>
+          <td>Bar</td>
+          <td>test@noreply.com</td>
+          <td>12.345.678</td>
+          <td>Doblado de Camisas</td>
+          <td>Ciclo Curricular en Organización de Indumentaria Doméstica</td>
+          <td>Departamento de Planificacion Civil</td>
+          <td>Estudiante Activo</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td><a class="btn btn-resaltado rounded-circle" href="./alumnos.html" target="_blank"><i class="fas fa-user-circle"></i></a></td>
+          <td>Foo</td>
+          <td>Bar</td>
+          <td>test@noreply.com</td>
+          <td>12.345.678</td>
+          <td>Plegado de Medias II</td>
+          <td>Ciclo Curricular en Organización de Indumentaria Doméstica</td>
+          <td>Departamento de Planificacion Civil</td>
+          <td>Estudiante Activo</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td><a class="btn btn-resaltado rounded-circle" href="./alumnos.html" target="_blank"><i class="fas fa-user-circle"></i></a></td>
+          <td>Foo</td>
+          <td>Bar</td>
+          <td>test@noreply.com</td>
+          <td>12.345.678</td>
+          <td>Administración y Managment de Cajas de Cartón Corrugado</td>
+          <td>Ciclo Curricular en Organización de Indumentaria Doméstica</td>
+          <td>Departamento de Planificacion Civil</td>
+          <td>Estudiante Activo</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td><a class="btn btn-resaltado rounded-circle" href="./alumnos.html" target="_blank"><i class="fas fa-user-circle"></i></a></td>
+          <td>Foo</td>
+          <td>Bar</td>
+          <td>test@noreply.com</td>
+          <td>12.345.678</td>
+          <td>Organización de Cajones (Anual)</td>
+          <td>Ciclo Curricular en Organización de Indumentaria Doméstica</td>
+          <td>Departamento de Planificacion Civil</td>
+          <td>Estudiante Activo</td>
+          <td></td>
+        </tr>
+
+        <tr>
+          <td><a class="btn btn-resaltado rounded-circle" href="./alumnos.html" target="_blank"><i class="fas fa-user-circle"></i></a></td>
+          <td>Foo</td>
+          <td>Bar</td>
+          <td>test@noreply.com</td>
+          <td>12.345.678</td>
+          <td>Teoría de Colores Aplicada</td>
+          <td>Ciclo Curricular en Organización de Indumentaria Doméstica</td>
+          <td>Departamento de Planificacion Civil</td>
+          <td>Estudiante Activo</td>
+          <td></td>
+        </tr>
       </tbody>
     </table>
 
