--- a/tabla-general.html
+++ b/tabla-general.html
@@ -83,7 +83,7 @@
         <div class="col-lg-4 p-0">
           <div class="modal-header rounded-0 border-0 resaltado d-flex flex-column align-items-center">
             <div class="d-flex w-100 align-items-start justify-content-between">
-              <h3 class="modal-title">HSU</h5>
+              <h3 class="modal-title">HSU</h3>
             </div>
             <p class="d-none d-md-inline text-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tristique quis sapien convallis finibus. Donec vel augue vitae sem convallis tincidunt sit amet ac diam. Nam sit amet nisi in est facilisis commodo nec non eros.</p>
           </div>
@@ -134,8 +134,9 @@
         - Cabecera Sticky dentro del DIV de la tabla.
         - Darle a la tabla colores y formato acorde a la tematica del sitio
     -->
+    <div class="tabla-de-datos table-responsive">
     <table class="table">
-      <thead class="resaltado">
+      <thead class="resaltado borde-resaltado">
         <tr>
           <th scope="col">Perfil</th>
           <th scope="col">Nombre</th>
@@ -255,6 +256,7 @@
         </tr>
       </tbody>
     </table>
+    </div>
 
   </main>
 
