Desactivar botones sin usar

--- a/alumnos.html
+++ b/alumnos.html
@@ -49,9 +49,9 @@
             <div class="menu-transparente dropdown-menu" aria-labelledby="tablasDropdown">
               <a class="dropdown-item" href="./tabla-general.html">General</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="./tabla-materia.html">Por materia</a>
-              <a class="dropdown-item" href="./tabla-carrera.html">Por carrera</a>
-              <a class="dropdown-item" href="./tabla-tutor.html">Por tutor</a>
+              <a class="dropdown-item disabled" href="./tabla-materia.html">Por materia</a>
+              <a class="dropdown-item disabled" href="./tabla-carrera.html">Por carrera</a>
+              <a class="dropdown-item disabled" href="./tabla-tutor.html">Por tutor</a>
             </div>
           </li>
           <li class="nav-item dropdown">
@@ -60,9 +60,9 @@
             </a>
             <div class="menu-transparente dropdown-menu" aria-labelledby="perfilesDropdown">
               <a class="dropdown-item" href="./alumnos.html">Alumnos</a>
-              <a class="dropdown-item" href="./tutores.html">Tutores</a>
-              <a class="dropdown-item" href="./materias.html">Materias</a>
-              <a class="dropdown-item" href="./carreras.html">Carreras</a>
+              <a class="dropdown-item disabled" href="./tutores.html">Tutores</a>
+              <a class="dropdown-item disabled" href="./materias.html">Materias</a>
+              <a class="dropdown-item disabled" href="./carreras.html">Carreras</a>
             </div>
           </li>
         </ul>
